dev-local/components/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devmesh-nextcloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts: ["files.${DEVMESH_DOMAIN}"]
  rules:
    - host: "files.${DEVMESH_DOMAIN}"
      http:
        paths:
          - {path: /, pathType: Prefix, backend: {service: {name: nextcloud, port: {number: 80}}}}
